# fastAPI

./: .dockerignore  Dockerfile  blog.db  main.py  pyproject.toml  requirements.txt  schemas.py
.devcontainer/: Dockerfile  devcontainer.json
routers/: posts.py  users.py
templates/: home.html  layout.html  post.html
